--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Currículum Vitae</title>
+     <title><%= og.title %></title>
+    <meta name="description" content="<%= og.description %>">
+    <meta property="og:title" content="<%= og.title %>">
+    <meta property="og:description" content="<%= og.description %>">
+    <meta property="og:image" content="<%= og.image %>">
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src='alertConfig.js'></script>
     <style type="text/css">
@@ -33,7 +37,7 @@
   width: 100%;
   top: -50%;
   left: 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), color-stop(75%, #ffffff), to(#ffffff));
+ background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), color-stop(75%, #ffffff), to(#ffffff));
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 75%, #ffffff 100%);
   -webkit-animation: run 7s 0s infinite;
           animation: run 7s 0s infinite;
@@ -163,6 +167,10 @@ label{
                 <button title="Enviar Mensaje" class='button'>Enviar</button>
             </div>
 
+            <div class="divButton">
+                  <a title="Inicia sesion con Google" href='/auth/google'><img src="https://ssl.gstatic.com/ui/v1/icons/mail/rfr/logo_gmail_lockup_default_1x_r5.png" width="150"></a> 
+             </div>
+
         </form>
 
     </section>
@@ -170,7 +178,6 @@ label{
         <h2>Contacto</h2>
 
         <div class='divIMG'>
-            
             <div class="divRedes">
              <img class="img" src="facebook.png">
              <a title="Haz click para ir a mi red social" href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F%3Fstype%3Dlo%26deoia%3D1%26jlou%3DAffsQ3sjvMeWymbIXqYkPTDp-FrLhKa48uQorW_OnNh6iAduDkUzRF-et0Gea8rCdTLR8jGNL0QjGrEdzYBIay77x2BRwIbg1E44Ub7-XEYk7g%26smuh%3D9642%26lh%3DAc-dpXesAcjmOj94Fk0">Facebook</a>
